# mt_cmake_static_lib

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
cmake/: config.cmake.in
include/: CMakeStaticLib.h
src/: CMakeStaticLib.cpp
